<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".screens.ListFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerImportance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="32dp" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/date_number"
            android:ems="10"
            android:inputType="date" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewAdd"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:src="@tools:sample/avatars"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:visibility="visible"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_item"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price_item"
                android:ems="10"
                android:inputType="number"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_shop"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_item"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity_item"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp" />
        </LinearLayout>

    </LinearLayout>


    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_item"
        android:ems="10"
        android:inputType="textPersonName"
        android:gravity="top"
        android:minHeight="150dp" />

    <Button
        android:id="@+id/pickImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Выбрать фото" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Добавить" />

</LinearLayout>